--- a/react-graded/package.json
+++ b/react-graded/package.json
@@ -14,8 +14,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.5",
+    "mongoose": "^6.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -25,8 +29,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "heroku-postbuild": "npm install && npm run build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "cd server && node server.js",
+    "dev-server": "cd server && node server.js",
+    "dev": "concurrently \"npm run dev-server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
@@ -34,6 +42,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^7.5.0",
     "prettier": "^2.7.1"
   }
 }
