--- a/react-graded/package.json
+++ b/react-graded/package.json
@@ -32,8 +32,8 @@
     "heroku-postbuild": "npm install && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "cd server && node server.js",
-    "dev-server": "cd server && node server.js",
+    "server": "cd ../server && node server.js",
+    "dev-server": "cd ../server && node server.js",
     "dev": "concurrently \"npm run dev-server\" \"npm start\""
   },
   "eslintConfig": {
